--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+			  "src/css/bootstrapaddon.css"
             ],
             "scripts": [
 				"node_modules/jquery/dist/jquery.min.js",
